<resources>
    <string name="app_name">Meet Poll</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="meet_title">Meet</string>
    <string name="poll_title">Poll</string>
    <string name="new_event_label">New Event</string>
    <string name="event_name">Enter Event Name</string>
    <string name="location_text">Enter address or intersection</string>
    <string name="location_string">Use Your Location</string>
    <string name="radius_string">Radius</string>
    <string name="event_time">Time</string>
    <string name="event_location">Location</string>
    <string name="event_type">Type</string>
    <string name="event_price">Price</string>
    <string name="find_places">Find Places</string>
    <string name="delete_event">Delete Event</string>
    <string name="settings_string">Settings</string>
    <string name="name">Name</string>
    <string name="title_name_preference">Name</string>
    <string name="dialogTitle_name_preference">What is your name?</string>
    <string name="alert_dialog_ok">Yes</string>
    <string name="alert_dialog_cancel">No</string>
    <string name="alert_dialog_two_buttons_title">Do you want to use your current location instead of location entered?</string>
    <string name="rating">Rating</string>
    <string name="title_activity_search_results">Map</string>
    <string name="gps_request_descript">This app requires GPS location service.</string>
    <string name="send_event">Send Event</string>
    <string name="title_activity_location_select_map">Map</string>
    <string name="select_location">Select Location</string>
    <string name="locataion_type_restaurant">restaurant</string>
    <string name="location_type_poi">point_of_interest</string>
    <string name="title_activity_search_results_list">SearchResultsListActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logout">Logout</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="firebase_path">https://steadfast-leaf-137323.firebaseio.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_tabbed_search_results">TabbedSearchResults</string>
    <string name="phone">Phone</string>
</resources>
