<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/add_contact"
        android:title="@string/add_contact"
        app:showAsAction="always"
        android:icon="@drawable/ic_person_add_white_36dp"
        />
    <item
        android:id="@+id/delete_event"
        android:title="@string/delete_event"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete_forever_white_36dp"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings_string"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>