<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="odb234.meetpoll.NewEventActivity"
    android:orientation="vertical">
    <!--<fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"/>-->
    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:inputType="textCapWords"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin">
        <!--<Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_place_black_18dp"
            android:layout_marginTop="17sp"/>-->
        <AutoCompleteTextView
            android:id="@+id/event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10sp"
            android:background="@drawable/edit_text_bg_2"
            android:hint="@string/location_text"
            android:singleLine="true" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_black_18dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/button_margin"
            android:backgroundTint="@android:color/white"
            android:background="@android:color/white"
            android:onClick="newEventClearText"
            android:scaleX=".8"
            android:scaleY=".8"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/location_button"
            android:layout_width="0dp"
            android:layout_weight=".9"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/location_string"
            android:drawableLeft="@drawable/ic_gps_fixed_black_18dp"
            android:drawablePadding="10sp"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="@color/splash_blue"
            android:hapticFeedbackEnabled="true"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/event_text_size"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            android:layout_marginRight="15dp"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_bg"
            android:backgroundTint="@color/splash_blue"
            android:src="@drawable/ic_place_black_18dp"
            android:onClick="mapSelectLocation"
            android:hapticFeedbackEnabled="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">
        <TextView
            android:layout_width="0sp"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            android:text="@string/radius_string"
            android:textSize="@dimen/event_text_size"
            android:layout_gravity="center_vertical"/>
        <SeekBar
            android:id="@+id/radius_seekbar"
            android:layout_width="0sp"
            android:layout_weight=".55"
            android:layout_height="wrap_content"
            android:scrollbarSize="@android:dimen/dialog_min_width_major"
            android:max="20"
            android:onClick="showRadiusValue"/>
        <TextView
            android:layout_width="0sp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/button_margin"
            android:text ="0 mi"
            android:textSize="@dimen/event_text_size"
            android:id="@+id/radius_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/button_margin">
        <TextView
            android:layout_width="0sp"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            android:textSize="@dimen/event_text_size"
            android:text="Date"/>
        <Button
            android:id="@+id/event_date"
            android:layout_width="0sp"
            android:layout_weight=".8"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_date_range_white_24dp"
            android:paddingRight="@dimen/button_margin"
            android:textSize="25sp"
            android:onClick="showDatePickerDialog"
            android:background="@drawable/picker_bg"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/button_margin">
        <TextView
            android:text="@string/event_time"
            android:layout_width="0sp"
            android:layout_weight=".2"
            android:layout_height="wrap_content"
            android:textSize="@dimen/event_text_size"/>
        <Button
            android:id="@+id/event_time"
            android:layout_width="0sp"
            android:layout_weight=".8"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_access_time_white_24dp"
            android:paddingRight="@dimen/button_margin"
            android:onClick="showTimePickerDialog"
            android:textSize="25sp"
            android:background="@drawable/picker_bg"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/button_margin">
        <TextView
            android:layout_width="0sp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/event_location"
            android:textSize="@dimen/event_text_size"
            android:layout_gravity="center"/>
        <Spinner
            android:id="@+id/location_spinner"
            android:layout_width="0sp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/button_margin"
        android:id="@+id/type_layout">
        <TextView
            android:layout_width="0sp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/event_type"
            android:textSize="@dimen/event_text_size"
            android:layout_gravity="center"/>
        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="0sp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:visibility="visible"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin">
        <TextView
            android:layout_width="0sp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="18sp"
            android:layout_gravity="center"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_rating"
            android:numStars="5"
            android:stepSize="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/find_places_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/find_places"
        android:background="@drawable/edit_text_bg"
        android:textSize="@dimen/event_text_size"
        android:textColor="@android:color/white"
        android:onClick="saveEvent"
        android:layout_marginTop="@dimen/button_margin"/>
    </LinearLayout>
</ScrollView>